[tool.poetry]
name = "web-5"
version = "0.1.0"
description = ""
authors = ["Yaroslav <svyatikua@gmail.com>"]
readme = "README.md"
packages = [{include = "web_5"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
